--- a/you.html
+++ b/you.html
@@ -119,7 +119,7 @@
            <div class="slideshow">
 			<img
 			class="mySlides"
-			src="./Mota/1.JPG"
+			src="./Mota/1.jpg"
 			alt="First slide"
 		  />
 		  <img
